@@ -1,5 +1,7 @@
 nxMyDB v0.4.0 (not released):
-  FIX: Correct instructions for executing the "schema.sql" batch file.
+  CHG: Make several attempts at opening the log file, in case of lock/sharing violations.
+  CHG: Open the log file only when a message is available to be written.
+  FIX: Corrected readme instructions for executing the "schema.sql" batch file.
 
 nxMyDB v0.3.0 (Oct 6, 2007):
   NEW: Added configuration option "Log_Level" to control the log verbosity.
